/*
 * Copyright 2016 Google, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;

package com.example.auth;

message AuthenticationRequest {
    string username = 1;
    string password = 2;
}

message AuthenticationResponse {
    string token = 1;
}

message AuthorizationRequest {
    string token = 1;
}

message AuthorizationResponse {
    string username = 1;
    repeated string roles = 2;
}

service AuthenticationService {
    rpc authenticate(AuthenticationRequest) returns (AuthenticationResponse);
    rpc authorization(AuthorizationRequest) returns (AuthorizationResponse);
}

